# HousingPredictor

./: README.md  housing_model.ipynb  pyproject.toml
