[project]
name = "housingpredictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Weston Gorczyca",email = "weston.gorczyca@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
